--- a/style.css
+++ b/style.css
@@ -25,9 +25,20 @@ body {
 .person {
 
 }
+.person__link {
+    color: #E20613;
+    text-decoration: none;
+}
+.person__info {
+    margin-bottom: 24px;
+}
 .person__descryption {
     font-style: 16px;
     line-height: 22px;
+    margin: 0;
+}
+.person__description--with-margin {
+    margin-bottom: 22px;
 }
 .pesron__name {
     font-size: 36px;
